--- a/style.css
+++ b/style.css
@@ -1,14 +1,21 @@
 * {
   margin: 0;
+  font-family: 'TitilliumWeb', Fallback, sans-serif;
 }
 
 body {
-  background-color:  #ffffff;
-  -webkit-animation: fadein 0.7s; /* Safari, Chrome and Opera > 12.1 */
-     -moz-animation: fadein 0.7s; /* Firefox < 16 */
-      -ms-animation: fadein 0.7s; /* Internet Explorer */
-       -o-animation: fadein 0.7s; /* Opera < 12.1 */
-          animation: fadein 0.7s; 
+  
+  -webkit-animation: fadein 0.5s ease-in; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 0.5s ease-in; /* Firefox < 16 */
+      -ms-animation: fadein 0.5s ease-in; /* Internet Explorer */
+       -o-animation: fadein 0.5s ease-in; /* Opera < 12.1 */
+          animation: fadein 0.5s ease-in; 
+}
+
+.body_bg_img {
+  background: url("background/geometry.jpg");
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 /* 
@@ -32,10 +39,12 @@ body {
 
 /* mobile first */
 .grid {
+  background: rgba(255, 255, 255, 0.85);
   display: grid;
   grid-gap: 0px;
   grid-template-areas: 
-  "header   title   title   title   title  "
+  "header  header  header  header  header "
+  "title   title   title   title   title  "
   "sidebar sidebar sidebar sidebar sidebar"
   "content content content content content"
   "footer  footer  footer  footer  footer "
@@ -43,46 +52,51 @@ body {
 }
 
 .grid div {
-  padding: 20px 20px 20px 20px;
+  padding: 10px 10px 10px 10px;
 }
 
 .title {
   grid-area: title;
   color: #000000;
-  background-color: #ffffff;
+  /*background-color: #ffffff;*/
   text-align: center;
   font-family: 'NewFrench', Fallback, sans-serif;
-  font-size: 6vw;
+  font-size: 7vw;
+  vertical-align: middle;
 }
 
 .header {
   grid-area: header;
-  background-color: #ff6a5c; 
+  background-color: #cccccc; 
 }
 
 .sidebar {
   grid-area: sidebar;
-  background-color: #ccdfcb;
+  background-color: #cccccc;
   font-family: 'TitilliumWeb', Fallback, sans-serif;
-  font: 0.5em;
 }
 
 .content {
   grid-area: content;
-  background-color: #eeeeee;
+  /*background-color: #eeeeee;*/
 }
 
 .footer {
   grid-area: footer;
   background-color: #056571;
+  color: white;
+  font-size: 1em;
 }
 
 /* desktop */
 @media screen and (min-width: 736px)
 {
   .grid {
+    max-width: 1200px;
+    margin: auto; /*keep everything centered*/
+    /*align-self: center;*/
     display: grid;
-    grid-gap: 15px;
+    grid-gap: 20px;
     grid-template-areas: 
       ".      title   title   title   title   title   .       .       .       .      "
       ".      header  header  header  header  header  header  header  header  .      "
@@ -93,7 +107,7 @@ body {
 
   .grid div {
     padding: 20px 20px 20px 20px;
-    border-radius: 2px;
+    border-radius: 3px;
   }
 
   .grid div:first-child {
@@ -101,6 +115,7 @@ body {
   }
 
   .grid div:last-child {
+    padding: 5px 10px 5px 10px;
     margin-bottom: 20px;
   }
 
@@ -108,35 +123,39 @@ body {
     text-align: left;
     font-size: 4vw; 
   }
+
+  .content {
+    min-height: 10000px;
+  }
 }
 
 /* animations */
 
 @keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
 }
 
 /* Firefox < 16 */
 @-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
 }
 
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
 }
 
 /* Internet Explorer */
 @-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
 }
 
 /* Opera < 12.1 */
 @-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
 }
