--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .body_bg_img {
-  padding: 10px;
+  padding: 0 10px;
   background: url("background/geometry.jpg");
   background-size: cover;
   background-attachment: fixed;
@@ -55,6 +55,7 @@ body {
 
 .grid div {
   padding: 10px 10px 10px 10px;
+  border-radius: 2px;
 }
 
 .title {
@@ -86,9 +87,9 @@ body {
 
 .footer {
   grid-area: footer;
-  background-color: #056571;
+  background-color: #333333;
   color: white;
-  font-size: 1em;
+  font-size: 0.7em;
 }
 
 /* desktop */
